Register + login + logout - full logic done